--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
     <meta charset="utf-8">
     <meta http-equiv="content-type" content="text/html">
     <title>Технический писатель - Владимир Маркиев.</title>
-    <link rel="stylesheet" href="style.css">
+
+    <!-- Stylesheets -->
+    <link rel="stylesheet" href="style_main.css">
+    <link rel="stylesheet" href="style_nav.css">
+    <link rel="stylesheet" href="style_footer.css">
+    <!-- Stylesheets -->
+
     <meta name="robots" content="follow, index" />
-    <meta name="description" content="Владимир Маркиев, Vladimir Markiev: Технический писатель в Санкт-Петербурге сайт-визитка." />
-    <meta property="og:title" content="Главная страница - Владимир Маркиев" />
+    <meta name="description" content="Сайт-визитка Владимира Маркиева - технического писателя из Санкт-Петербурга." />
+    <meta property="og:title" content="Владимир Маркиев. Технический писатель в Санкт-Петербурге." />
     <meta property="og:type" content="profile" />
     <meta property="profile:first_name" content="Владимир" />
     <meta property="profile:last_name" content="Маркиев" />
@@ -16,90 +22,65 @@
     <meta property="og:url" content="https://vladimir-markiev.name/" />
     <link rel="canonical" content="https://vladimir-markiev.name/" />
     <meta property="og:image" content="https://vladimir-markiev.name/img/profile.jpg">
-    <meta property="og:description" content="Владимир Маркиев: Технический писатель в Санкт-Петербурге сайт-визитка." />
+    <meta property="og:description" content="Сайт-визитка Владимира Маркиева - технического писателя из Санкт-Петербурга." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Markiev Vladimir">
-    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
-    <link rel="manifest" href="/favicon/site.webmanifest">
-    <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#5bbad5">
-    <link rel="shortcut icon" href="/favicon/favicon.ico">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="msapplication-config" content="/favicon/browserconfig.xml">
-    <meta name="theme-color" content="#ffffff">
-    <!-- Yandex.Metrika counter -->
-    <script type="text/javascript">
-        (function(m, e, t, r, i, k, a) {
-            m[i] = m[i] || function() {
-                (m[i].a = m[i].a || []).push(arguments)
-            };
-            m[i].l = 1 * new Date();
-            k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
-        })
-        (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
-        ym(62734534, "init", {
-            clickmap: true,
-            trackLinks: true,
-            accurateTrackBounce: true,
-            webvisor: true
-        });
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest">
+    <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="favicon/favicon.ico">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-config" content="favicon/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
+    <!-- Favicons -->
+
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript" src="js_metrika.js">
     </script>
     <noscript>
         <div><img src="https://mc.yandex.ru/watch/62734534" style="position:absolute; left:-9999px;" alt="" /></div>
     </noscript>
     <!-- /Yandex.Metrika counter -->
+
+<script type="text/javascript" src="js_nav.js">
+    </script>
 </head>
 <a name="top"></a>
 
 <body>
-    <div class="sidenav">
-        <a tabindex="1" class="current" href="#top">Главная</a>
-        <a tabindex="2" href="about.html">Обо мне</a>
-        <a tabindex="3" href="education.html">Образование</a>
-        <a tabindex="4" href="experience.html">Резюме</a>
-        <a tabindex="5" href="searchingfor.html">Желаемая должность</a>
-        <a tabindex="6" href="cases.html">Портфолио</a>
-    </div>
-    <div class="topnav">
-        <a href="#top" class="navbar">Выпадающее меню ---></a>
-        <div id="myLinks">
+<!-- МЕНЮ -->
+    <div id="mySidebar" class="sidebar">
+        <a href="javascript:void(0);" class="closebtn" onclick="closeNav()">X</a>
+       
             <a tabindex="1" class="current" href="#top">Главная</a>
             <a tabindex="2" href="about.html">Обо мне</a>
             <a tabindex="3" href="education.html">Образование</a>
             <a tabindex="4" href="experience.html">Резюме</a>
-            <a tabindex="5" href="searchingfor.html">Желаемая должность</a>
+            <a tabindex="5" href="skills.html">Желаемая должность</a>
             <a tabindex="6" href="cases.html">Портфолио</a>
-        </div>
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-            <svg class="bi bi-list" width=".9em" height=".9em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" d="M2.5 11.5A.5.5 0 013 11h10a.5.5 0 010 1H3a.5.5 0 01-.5-.5zm0-4A.5.5 0 013 7h10a.5.5 0 010 1H3a.5.5 0 01-.5-.5zm0-4A.5.5 0 013 3h10a.5.5 0 010 1H3a.5.5 0 01-.5-.5z" clip-rule="evenodd" />
-            </svg>
-        </a>
     </div>
 
-    <script>
-        function myFunction() {
-            var x = document.getElementById("myLinks");
-            if (x.style.display === "block") {
-                x.style.display = "none";
-            } else {
-                x.style.display = "block";
-            }
-        }
-    </script>
-
     <div class="main">
+
         <div class="header">
             <nav>
                 <ul class="breadcrumb">
+
+                <!-- КНОПКА МЕНЮ -->
+                    <li>
+                        <button class="openbtn" onclick="openNav()">Открыть меню</button>
+                    </li>
+                <!-- КОНЕЦ МЕНЮ -->
+
                     <li><a tabindex="7" href="#top">Наверх</a></li>
                     <li>Главная</li>
-                </ul>
-            </nav>
 
-            <h1 class="h1">Сайт-визитка Маркиева Владимира</h1>
+                </ul>
+            </nav>   
         </div>
         <img src="img/myself.jpg" alt="Улыбающийся автор сайта приветствует вас." id="myself">
         <div id="zooming" class="zoom">
@@ -108,34 +89,15 @@
             <div id="caption"></div>
         </div>
 
-        <script>
-            // Get the modal
-            var modal = document.getElementById("zooming");
-
-            // Get the image and insert it inside the modal - use its "alt" text as a caption
-            var img = document.getElementById("myself");
-            var modalImg = document.getElementById("img01");
-            var captionText = document.getElementById("caption");
-            img.onclick = function() {
-                modal.style.display = "block";
-                modalImg.src = this.src;
-                captionText.innerHTML = this.alt;
-            }
-
-            // Get the <span> element that closes the modal
-            var span = document.getElementsByClassName("close")[0];
-
-            // When the user clicks on <span> (x), close the modal
-            span.onclick = function() {
-                modal.style.display = "none";
-            }
+        <script type="text/javascript" src="js_modal.js">
         </script>
 
-        <div class="content">
+        <div class="content first"> <h1 class="h1">Сайт-визитка Маркиева Владимира</h1></div>
+        <div class="content second">
             <p class="subheadline">Здравствуйте и добро пожаловать! Меня зовут Владимир Маркиев, и&nbsp;я&nbsp;создал этот сайт полностью своими руками.</p>
             <p>Сайт служит мне своего рода электронной визиткой, не печатать же бумажные в самом деле. Главный недостаток сайта - много текста, мало картинок. Но я - художник и я так вижу, не люблю много говорить, но могу много писать.</p><br>
             <p style="font-size: 1.2em; font-style: italic">Сейчас я не ищу работу, но сайт такой красивый, что я не хочу его удалять. Пусть будет визиткой.</p>
-            <!-- Я стараюсь быть открытым для всех, поэтому в разделе <a href="searchingfor.html">"желаемая должность"</a> я перечислил все привлекающие меня должности.</p>
+            <!-- Я стараюсь быть открытым для всех, поэтому в разделе <a href="skills.html">"желаемая должность"</a> я перечислил все привлекающие меня должности.</p>
             <p>Можно было бы ограничить себя одной-единственной, но тогда бы мне пришлось создавать несколько сайтов. Да и было бы это совсем не честно. Честность для меня - превыше всего. Я не хочу кому-то впарить свою кандидатуру обманом. Пусть лучше сайт рекомендует меня потенциальному работодателю.</p>
             <p>В ответ я бы тоже хотел получить честный ответ - мнение о моей кандидатуре, обо мне. Главным в работе я считаю: 1. возможность проявить себя, 2. приятный дружный коллектив и 3. честное руководство. В принципе, я могу ужиться в любых условиях, но я бы очень-очень хотел не уживаться, а работать, заниматься делом: сложным, простым, однообразным, разнообразным, любым. Это дело обязательно будет любимым, потому что иначе не может быть, когда коллеги являются коллективом, а не случайно встретившимися людьми, где руководство справедливое, даже если строгое, где всё устроено открыто и честно.</p> --><br>
             <i>Если у вас нет желания или времени читать и смотреть весь сайт, предлагаю сразу перейти в наиболее соответствующий вашей текущей потребности раздел из меню.</i>
@@ -182,7 +144,8 @@
                         <path id="ema" d="M19 24h-14c-2.761 0-5-2.239-5-5v-14c0-2.761 2.239-5 5-5h14c2.762 0 5 2.239 5 5v14c0 2.761-2.238 5-5 5zm-.141-6.333c.63 0 1.141-.512 1.141-1.142v-9.05c0-.63-.511-1.142-1.141-1.142h-13.718c-.63 0-1.141.512-1.141 1.142v9.05c0 .63.511 1.142 1.141 1.142h13.718zm-6.859-4.058l-6.228-4.321-.014 7.712h12.457v-7.712l-6.215 4.321zm5.913-6.609c-1.745 1.215-5.913 4.153-5.913 4.153l-5.947-4.153h11.86z" /></svg></a>
                 <a tabindex="16" class="icons-link" href="https://join.skype.com/invite/jz5UwAeAepqL" target="_blank"><svg class="icons sky" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                         <path fill="white" d="M16.283 13.883c0 2.026-1.615 3.354-4.026 3.354-2.121 0-4.252-.965-4.242-2.627.003-.501.376-.961.872-.961 1.249 0 1.237 1.863 3.225 1.863 1.396 0 1.872-.764 1.872-1.296 0-1.924-6.03-.745-6.03-4.362 0-1.958 1.602-3.309 4.12-3.161 2.401.142 3.809 1.202 3.944 2.193.067.647-.361 1.151-1.105 1.151-1.086 0-1.196-1.454-3.067-1.454-.844 0-1.556.352-1.556 1.116 0 1.597 5.993.67 5.993 4.184zm7.717-8.883v14c0 2.761-2.238 5-5 5h-14c-2.761 0-5-2.239-5-5v-14c0-2.761 2.239-5 5-5h14c2.762 0 5 2.239 5 5z" />
-                        <path id="sky" d="M16.283 13.883c0 2.026-1.615 3.354-4.026 3.354-2.121 0-4.252-.965-4.242-2.627.003-.501.376-.961.872-.961 1.249 0 1.237 1.863 3.225 1.863 1.396 0 1.872-.764 1.872-1.296 0-1.924-6.03-.745-6.03-4.362 0-1.958 1.602-3.309 4.12-3.161 2.401.142 3.809 1.202 3.944 2.193.067.647-.361 1.151-1.105 1.151-1.086 0-1.196-1.454-3.067-1.454-.844 0-1.556.352-1.556 1.116 0 1.597 5.993.67 5.993 4.184zm7.717-8.883v14c0 2.761-2.238 5-5 5h-14c-2.761 0-5-2.239-5-5v-14c0-2.761 2.239-5 5-5h14c2.762 0 5 2.239 5 5zm-4.675 8.311c.904-5.177-3.61-9.608-8.702-8.653-3.881-2.374-8.335 2.151-5.956 6.02-.925 5.165 3.589 9.654 8.722 8.673 3.888 2.357 8.329-2.174 5.936-6.04z" /></svg></a></div>
+                        <path id="sky" d="M16.283 13.883c0 2.026-1.615 3.354-4.026 3.354-2.121 0-4.252-.965-4.242-2.627.003-.501.376-.961.872-.961 1.249 0 1.237 1.863 3.225 1.863 1.396 0 1.872-.764 1.872-1.296 0-1.924-6.03-.745-6.03-4.362 0-1.958 1.602-3.309 4.12-3.161 2.401.142 3.809 1.202 3.944 2.193.067.647-.361 1.151-1.105 1.151-1.086 0-1.196-1.454-3.067-1.454-.844 0-1.556.352-1.556 1.116 0 1.597 5.993.67 5.993 4.184zm7.717-8.883v14c0 2.761-2.238 5-5 5h-14c-2.761 0-5-2.239-5-5v-14c0-2.761 2.239-5 5-5h14c2.762 0 5 2.239 5 5zm-4.675 8.311c.904-5.177-3.61-9.608-8.702-8.653-3.881-2.374-8.335 2.151-5.956 6.02-.925 5.165 3.589 9.654 8.722 8.673 3.888 2.357 8.329-2.174 5.936-6.04z" /></svg></a>
+                    </div>
         </div>
     </div>
 </body></html>
