latest changes, added local fonts

--- a/skills.html
+++ b/skills.html
@@ -6,6 +6,11 @@
     <meta http-equiv="content-type" content="text/html">
     <title>Технические навыки. Владимир Маркиев</title>
 
+    <!-- Preload fonts -->
+    <link rel="preload" href="style_fonts.css" as="style">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+
     <!-- Stylesheets -->
     <link rel="stylesheet" href="style_main.css">
     <link rel="stylesheet" href="style_nav.css">
@@ -55,7 +60,7 @@
 <body>
   <!-- МЕНЮ -->
     <div id="mySidebar" class="sidebar">
-        <a href="javascript:void(0);" class="closebtn" onclick="closeNav()">X</a>
+        <a href="javascript:void(0);" class="closebtn" onclick="closeNav()">Скрыть</a>
         <a tabindex="1" href="index.html">Главная</a>
         <a tabindex="2" href="about">Обо мне</a>
         <a tabindex="3" href="education.html">Образование</a>
